--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "paynow-node-sdk",
+  "name": "paynowdemo",
   "version": "1.0.0",
-  "description": "SDK for Paynow Zimbabwe's API",
+  "description": "Paynow SDK Demo",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/ --out-file dist/paynow.js --source-maps --presets=es2015,flow",
-    "prepublish": "yarn run build"
+    "build": "babel src/ --out-file dist/index.js --source-maps --presets=es2015,flow"
   },
-  "keywords": [
-    "paynow",
-    "paynow",
-    "zimbabwe",
-    "paynow",
-    "sdk",
-    "paynow",
-    "library",
-    "paynow",
-    "zimbabwe",
-    "api",
-    "paynow",
-    "zimbabwe",
-    "sdk"
-  ],
-  "author": "Melvin Mupondori <melmups@outlook.com>",
   "license": "MIT",
   "dependencies": {
     "js-sha512": "^0.7.1",
-    "request": "^2.86.0",
+    "request": "^2.87.0",
     "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0"
+  },
+  "babel": {
+    "presets": [
+      "flow",
+      "es2015"
+    ]
   }
 }
