--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paynowdemo",
+  "name": "paynow",
   "version": "1.0.1",
   "description": "Paynow SDK Demo",
   "main": "dist/index.js",
