--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^23.3.13",
     "@types/node": "^10.12.9",
     "js-sha512": "^0.7.1",
     "request": "^2.87.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "save-dev": "^2.0.0",
+    "ts-jest": "^23.10.5"
   },
   "devDependencies": {
     "jest": "^24.0.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.3.1"
   }
 }
