--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.JS SDK for Zimbabwe's Leading Payment Gateway, Paynow",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc --removeComments --sourceMap"
   },
   "repository": {
