--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
-        "module": "system",
+      "baseUrl": ".",
+      "paths": { "*": ["types/*"] },
+        "target": "es5",
+        "module": "commonjs",
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "outFile": "dist/index.js",
+        "outDir": "dist/",
         "sourceMap": true
     },
     "include": [
