Added typescript project support to the paynow node sdk module
Added typescript support by
- setting the declaration flag to true in tsconfig.json
- setting the type declaration output directory to dist/declarations to avoid confusion (there's already another folder called "types") in dist
- pointing to the typescript declarations in package.json
-building and testing the module locally

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "Node.JS SDK for Zimbabwe's Leading Payment Gateway, Paynow",
   "main": "dist/index.js",
+  "types": "dist/declarations/index.d.ts",
   "scripts": {
     "test": "echo 'Unit tests have been temporarily disabled.'",
     "build:tsc": "tsc --removeComments --sourceMap",
