--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,16 +22,16 @@
     "innbucks"
   ],
   "dependencies": {
-    "js-sha512": "^0.7.1",
-    "request": "^2.87.0",
-    "request-promise-native": "^1.0.5",
-    "urlencode": "^2.0.0"
+    "js-sha512": "^0.7.1"
   },
   "devDependencies": {
     "@swc/core": "^1.10.7",
+    "@types/jest": "^29.5.14",
     "@types/node": "^10.12.9",
     "@types/request-promise-native": "^1.0.16",
     "concat": "^1.0.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3"
   }
